--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.107.0",
+    "@react-three/fiber": "^8.16.8",
+    "almost-equal": "^1.1.0",
+    "canvas-sketch-util": "^1.10.0",
+    "defined": "^1.0.1",
+    "float-hsl2rgb": "^1.0.2",
+    "float-rgb2hsl": "^1.0.1",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "three": "^0.165.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/almost-equal": "^1.1.3",
+    "@types/defined": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.165.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
