--- a/package.json
+++ b/package.json
@@ -11,22 +11,42 @@
   "dependencies": {
     "@react-three/drei": "^9.107.0",
     "@react-three/fiber": "^8.16.8",
+    "abs-svg-path": "^0.1.1",
     "almost-equal": "^1.1.0",
+    "array-almost-equal": "^1.0.0",
     "canvas-sketch-util": "^1.10.0",
+    "clone": "^2.1.2",
+    "convert-length": "^1.0.1",
+    "d3-path": "^3.1.0",
     "defined": "^1.0.1",
     "float-hsl2rgb": "^1.0.2",
     "float-rgb2hsl": "^1.0.1",
+    "lineclip": "^1.1.5",
     "next": "14.2.4",
+    "parse-color": "^1.0.0",
+    "parse-svg-path": "^0.1.2",
+    "primitive-quad": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "regl": "^2.1.0",
+    "seed-random": "^2.2.0",
+    "simplex-noise": "^2.4.0",
+    "svg-path-contours": "^2.0.0",
     "three": "^0.165.0"
   },
   "devDependencies": {
+    "@types/abs-svg-path": "^0.1.3",
     "@types/almost-equal": "^1.1.3",
+    "@types/clone": "^2.1.4",
+    "@types/d3-path": "^3.1.0",
     "@types/defined": "^1.0.2",
+    "@types/lineclip": "^1.1.1",
     "@types/node": "^20",
+    "@types/parse-color": "^1.0.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/seed-random": "^2.2.4",
+    "@types/svg-path-contours": "^2.0.1",
     "@types/three": "^0.165.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
