--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "canvas-sketch-util": ["./node_modules/canvas-sketch-util-types"],
+      "canvas-sketch-util/*": ["./node_modules/canvas-sketch-util-types/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
