--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "abs-svg-path": "^0.1.1",
     "almost-equal": "^1.1.0",
     "array-almost-equal": "^1.0.0",
+    "bezier-easing": "^2.1.0",
     "canvas-sketch-util": "^1.10.0",
     "canvas-sketch-util-types": "^0.5.1",
     "clone": "^2.1.2",
     "convert-length": "^1.0.1",
     "d3-path": "^3.1.0",
     "defined": "^1.0.1",
+    "eases": "^1.0.8",
     "float-hsl2rgb": "^1.0.2",
     "float-rgb2hsl": "^1.0.1",
     "lineclip": "^1.1.5",
@@ -42,6 +44,7 @@
     "@types/clone": "^2.1.4",
     "@types/d3-path": "^3.1.0",
     "@types/defined": "^1.0.2",
+    "@types/eases": "^1.0.4",
     "@types/lineclip": "^1.1.1",
     "@types/node": "^20",
     "@types/parse-color": "^1.0.3",
