--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "eases": "^1.0.8",
     "float-hsl2rgb": "^1.0.2",
     "float-rgb2hsl": "^1.0.1",
+    "glslify": "^7.1.1",
+    "glslify-loader": "^2.0.0",
     "lineclip": "^1.1.5",
     "next": "14.2.4",
     "nice-color-palettes": "^3.0.0",
     "parse-color": "^1.0.0",
     "parse-svg-path": "^0.1.2",
     "primitive-quad": "^2.0.0",
+    "raw-loader": "^4.0.2",
     "react": "^18",
     "react-dom": "^18",
     "regl": "^2.1.0",
